objects/LAT_ProductCost__c.object
<CustomObject>
    <fields>
        <fullName>AN8Name__c</fullName>
        <formula>AN8__r.Client_code_AN8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AN8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AN8__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Informações Custo Produtos</relationshipLabel>
        <relationshipName>Informa_es_Custo_Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Case__c</fullName>
        <description>CM_Case__c</description>
        <label>CM</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canal</label>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Informações Custo Produtos</relationshipLabel>
        <relationshipName>Informa_es_Custo_Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributorCost__c</fullName>
        <description>DistributorCost__c</description>
        <label>CUSTO ROI</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Data Fim Vigência</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <formula>TEXT(UF__c)  &amp;  &apos;-&apos;  &amp; AN8__r.Client_code_AN8__c   &amp; &apos;-&apos; &amp; Canal__r.CodDefUsuario__c  &amp; &apos;-&apos; &amp;  Product__r.RecordType.Name &amp; &apos;-&apos; &amp;  Product__r.Name  &amp; &apos;-&apos;&amp; TEXT(YEAR(DATEVALUE(StartDate__c)))&amp; LPAD(TEXT(MONTH(DATEVALUE(StartDate__c))),2,&apos;0&apos;) &amp; LPAD(TEXT(DAY(DATEVALUE(StartDate__c))),2,&apos;0&apos;)&amp; SUBSTITUTE(MID ( TEXT (StartDate__c ), 12, 5), &apos;:&apos;, &apos;&apos;)</formula>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDCost__c</fullName>
        <description>LDCost__c</description>
        <label>CUSTO A&amp;P</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeasureUnit__c</fullName>
        <description>Field that indicates the measure of unit for which the cost is expressed.</description>
        <label>Unidade Medida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                    <default>true</default>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>C9</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Sales_Case__c</fullName>
        <description>Net_Sales_Case__c</description>
        <label>NIS</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agrupamento Produto</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (7 AND 8) OR (9 AND 10)</booleanFilter>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Volume Contrato</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volume Contrato</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Coleta Volume (ON)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta Volume (ON)</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Pagamento Produto</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pagamento Produto</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Coleta NF (ON)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta NF (ON)</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Coleta Volume (ON)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta Volume (ON)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Informações Custo Produtos</relationshipLabel>
        <relationshipName>LAT_ProductCosts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Data Início Vigência</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <inlineHelpText>Start month for the product cost vigency</inlineHelpText>
        <label>Mês Início Vigência</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <inlineHelpText>Select the start year for the vigency of the product cost</inlineHelpText>
        <label>Ano Início Vigência</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Informações Custo Produto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>UF__c</columns>
        <columns>Canal__c</columns>
        <columns>AN8Name__c</columns>
        <columns>AN8__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Product__c</columns>
        <columns>MeasureUnit__c</columns>
        <columns>CM_Case__c</columns>
        <columns>LDCost__c</columns>
        <columns>DistributorCost__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pagamento_Produto</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>UF__c</columns>
        <columns>Canal__c</columns>
        <columns>AN8Name__c</columns>
        <columns>AN8__c</columns>
        <columns>Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MeasureUnit__c</columns>
        <columns>Net_Sales_Case__c</columns>
        <columns>CM_Case__c</columns>
        <columns>LDCost__c</columns>
        <columns>DistributorCost__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ProductCost__c.LAT_ProductPayment</value>
        </filters>
        <label>Pagamento Produto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pagamento_Produto_Custom</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>UF__c</columns>
        <columns>Canal__c</columns>
        <columns>AN8Name__c</columns>
        <columns>AN8__c</columns>
        <columns>Product__c</columns>
        <columns>MeasureUnit__c</columns>
        <columns>Net_Sales_Case__c</columns>
        <columns>CM_Case__c</columns>
        <columns>LDCost__c</columns>
        <columns>DistributorCost__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>CHIVAS 12YO 750ML</value>
        </filters>
        <label>Pagamento Produto - Custom</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Volume_Contrato</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>UF__c</columns>
        <columns>Canal__c</columns>
        <columns>AN8Name__c</columns>
        <columns>AN8__c</columns>
        <columns>Product__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>MeasureUnit__c</columns>
        <columns>Net_Sales_Case__c</columns>
        <columns>CM_Case__c</columns>
        <columns>LDCost__c</columns>
        <columns>DistributorCost__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ProductCost__c.LAT_ContractVolume</value>
        </filters>
        <label>Volume Contrato</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Volume_Contrato_Custom</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>UF__c</columns>
        <columns>Canal__c</columns>
        <columns>AN8Name__c</columns>
        <columns>AN8__c</columns>
        <columns>Product__c</columns>
        <columns>MeasureUnit__c</columns>
        <columns>Net_Sales_Case__c</columns>
        <columns>CM_Case__c</columns>
        <columns>LDCost__c</columns>
        <columns>DistributorCost__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ProductCost__c.LAT_ContractVolume</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>CHIVAS REGAL 12YO 750ml</value>
        </filters>
        <label>Volume Contrato - Custom</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Informações Custo Produto Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informações Custo Produtos</pluralLabel>
    <recordTypes>
        <fullName>LAT_ContractVolume</fullName>
        <active>true</active>
        <label>Volume Contrato</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_ProductPayment</fullName>
        <active>true</active>
        <label>Pagamento Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_SellOut</fullName>
        <active>true</active>
        <label>Coleta SellOut (OFF)</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Sellin</fullName>
        <active>true</active>
        <label>Coleta NF (ON)</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Volumen</fullName>
        <active>true</active>
        <label>Coleta Volume (ON)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Star_Date_less_than_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End date must be greater than start date</errorMessage>
    </validationRules>
</CustomObject>